--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,5 @@
 {
   "projects": {
-    "name": "LinkedIn Clone",
-    "default": "linkedin-clone-83af9",
-    "id": "linkedin-clone-83af9"
+    "default": "linkedin-clone-83af9"
   }
 }
