--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sort-by": "^0.0.2"
   },
   "devDependencies": {
+    "@rollup/plugin-node-resolve": "^15.2.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
